[tool.poetry]
name = "pyskim"
version = "0.1.4"
description = "Quickly create summary statistics for a given dataframe."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/pyskim"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "^1.3.2"
scipy = "^1.7.1"
numpy = "^1.21.2"
click = "^8.0.1"
tabulate = "^0.8.9"
ipython = "^7.26.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^21.7b0"
pytest = "^6.2.4"

[tool.poetry.scripts]
pyskim = "pyskim:main"
