[tool.poetry]
name = "pyskim"
version = "0.1.4"
description = "Quickly create summary statistics for a given dataframe."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/pyskim"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.3.2"
scipy = "^1.10.0"
numpy = "^1.21.2"
click = "^8.0.1"
tabulate = ">=0.8.9,<0.10.0"
ipython = ">=7.26,<9.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^22.1"
pytest = "^7.0.0"

[tool.poetry.scripts]
pyskim = "pyskim:main"
