[tool.poetry]
name = "pyskim"
version = "0.1.4"
description = "Quickly create summary statistics for a given dataframe."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/pyskim"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
scipy = "^1.12.0"
numpy = "^1.26.4"
click = "^8.1.7"
tabulate = "^0.9.0"
ipython = "^8.21.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^24.2.0"
pytest = "^8.0.1"

[tool.poetry.scripts]
pyskim = "pyskim:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"